<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BluesIII"
    android:orientation="vertical">




    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_right_left"
        android:layout_marginRight="@dimen/margin_right_left"
        android:layout_marginTop="@dimen/padding_top"
        android:background="@drawable/rounded_corners"
        android:padding="@dimen/padding"
        android:text="@string/text_view"
        android:textAlignment="center" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BluesIII">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/BluesIII"
            android:orientation="vertical">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.example.ronik.myticketproject1.MyRadioButton
                    android:id="@+id/rb0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_right_left"
                    android:layout_marginRight="@dimen/margin_right_left"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_corners"
                    android:onClick="checkAnswer"
                    android:padding="@dimen/padding"
                    android:text="@string/rb0"
                    android:textAlignment="center" />

                <com.example.ronik.myticketproject1.MyRadioButton
                    android:id="@+id/rb1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_right_left"
                    android:layout_marginRight="@dimen/margin_right_left"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_corners"
                    android:onClick="checkAnswer"
                    android:padding="@dimen/padding"
                    android:text="@string/rb3"
                    android:textAlignment="center" />

                <com.example.ronik.myticketproject1.MyRadioButton
                    android:id="@+id/rb2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_right_left"
                    android:layout_marginRight="@dimen/margin_right_left"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_corners"
                    android:onClick="checkAnswer"
                    android:padding="@dimen/padding"
                    android:text="@string/rb1"
                    android:textAlignment="center" />

                <com.example.ronik.myticketproject1.MyRadioButton
                    android:id="@+id/rb3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_right_left"
                    android:layout_marginRight="@dimen/margin_right_left"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_corners"
                    android:onClick="checkAnswer"
                    android:padding="@dimen/padding"
                    android:text="@string/rb2"
                    android:textAlignment="center" />
            </RadioGroup>


            />


        </LinearLayout>

    </ScrollView>

</LinearLayout>
